# oxford-pet-model-comparison

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: oxford_pet.yaml
configs/exp/: base.yaml  finetune.yaml  freeze.yaml
configs/model/: efficientnet_b0.yaml  mobilenet_v2.yaml  resnet18.yaml  simple_cnn.yaml
configs/paths/: paths.yaml
configs/train/: train.yaml
scripts/: evaluate.py  predict.py  test.py  train.py  visualize.py
src/oxford_pet_model_comparison/cli/: __init__.py  evaluate.py  predict.py  train.py
src/oxford_pet_model_comparison/data/: transforms.py
src/oxford_pet_model_comparison/datasets/: __init__.py  dataloader.py  dataloaders.py  datamodule.py  oxford_pet_dataset.py  transforms.py
src/oxford_pet_model_comparison/engine/: __init__.py  checkpoint.py  evaluate_one_epoch.py  factories.py  fit.py  train_one_epoch.py  trainer.py
src/oxford_pet_model_comparison/engine/checkpoint/: __init__.py  load.py  save.py
src/oxford_pet_model_comparison/engine/factories/: __init__.py  training_factory.py
src/oxford_pet_model_comparison/inference/: predictor.py
src/oxford_pet_model_comparison/models/: __init__.py  build.py  efficientnet_b0.py  mobilenet_v2.py  model_factory.py  registry.py  resnet18.py  simple_cnn.py
src/oxford_pet_model_comparison/pipelines/: __init__.py  predictor.py
src/oxford_pet_model_comparison/training/: trainer.py
src/oxford_pet_model_comparison/utils/: __init__.py  image_utils.py  io.py  seed.py
src/oxford_pet_model_comparison/visualize/: __init__.py  plots.py
(+2 files in other folders)
